--- a/TP2/docs/informe/02-Modelo.tex
+++ b/TP2/docs/informe/02-Modelo.tex
@@ -1,33 +1,33 @@
 \section{Modelo}\label{sec:modelo}
 
-\subsection{Automatas celulares}\label{subsec:automatas-celulares}
+\subsection{Autómatas celulares}\label{subsec:automatas-celulares}
 
-Un automata celular modela un sistema dinamico el cual evoluciona en pasos discretos mediantes reglas o heuristicas,
-las que determinan la transicion entre dos estados.
+Un automata celular modela un sistema dinámico el cual evoluciona en pasos discretos mediantes reglas o heurísticas,
+las que determinan la transición entre dos estados.
 
-El sistema se compone de una matriz de celdas que poseen un numero finito de estados discretos y estos se iran actualizando
-de manera sincronica en cada paso temporal.
+El sistema se compone de una matriz de celdas que poseen un número finito de estados discretos y estos se irán actualizando
+de manera sincrónica en cada paso temporal.
 
-Las reglas se caracterizan por ser deterministicas y uniformes en tiempo y espacio. Es decir, que las reglas para la evolucion
-de una celda solamente depende de un vecindario. Donde este vecindario sera definido segun la implementacion y las reglas.
+Las reglas se caracterizan por ser determinísticas y uniformes en tiempo y espacio. Es decir, las reglas para la evolución 
+de una celda solamente depende de su vecindario, el cual será definido según la implementación y las reglas.
 
-En una transicion de estados, se define un alcance r, el cual determina el grupo de celdas cercanas que son tenidas
-en cuenta para la regla de transicion. El conjunto de celdas vecinas tambien varia en funcion de la definicion de vecindario.
+En una transición de estados, se define el alcance r, el cual determina el grupo de celdas cercanas que deben ser 
+tenidas en cuenta para la regla de transición.
 
 \subsection{Definiciones de vecindad}\label{subsec:definiciones-de-vecindad}
-Como se ha mencionado, el alcance es un parametro que describe a un sistema en particualar. Sin embargo, debe tambien
-tenerse en cuenta bajo que definicion de vecindario se trabaja. Se han contemplado los siguietnes.
+Como se ha mencionado, el alcance es un parámetro que describe a un sistema en particualar. Sin embargo, debe tambien
+tenerse en cuenta bajo que definicion de vecindario se trabaja. Se han contemplado los siguientes.
 
-En primer lugar el vecindario \textbf{Von Neumann} considera como vecina aquellas celdas que se encuentran dentro del rango r
-considerando la distancia Manhattan. De forma mas precisa, el conjunto de vecinas se define de la siguiente manera:
+En primer lugar, el vecindario \textbf{Von Neumann} considera como vecina aquellas celdas que se encuentran dentro del rango r
+considerando la distancia Manhattan. De forma mas precisa, el conjunto de vecinas se define como:
 \begin{itemize}
     \item Bidimensional: $N_{i,j}^{(vN)}:=\{(a,b) \in L\ |\ |a - i| + |b - j| \leq r\}$.
     \item Tridimensional: $N_{i,j, k}^{(vN)}:=\{(a,b,c) \in L\ |\ |a-i| + |b - j| + |c + k| \leq r\}$.
 \end{itemize}
 
 
-Por otro lado, el vecindario \textbf{Moore} considera una celda como vecina si toda las componentes de su posicion se encuentran
-a distancia menor a r. De forma mas precisa el conjunto de celdas vecinas es $N_{i,j}^{(M)}:=\{(k,l) \in L\ |\ |k-i|\leq r\ and\ |l - j| \leq r \}$.
+Por otro lado, el vecindario \textbf{Moore} considera que una celda es vecina de otra si todas las componentes de su posición se encuentran
+a una distancia menor a r. De forma mas precisa el conjunto de celdas vecinas es $N_{i,j}^{(M)}:=\{(k,l) \in L\ |\ |k-i|\leq r\ and\ |l - j| \leq r \}$.
 \begin{itemize}
     \item Bidimensional: $N_{i,j}^{(M)}:=\{(a,b) \in L\ |\ |a-i|\leq r\ and\ |b - j| \leq r \}$
     \item Tridimensional: $N_{i,j,k}^{(M)}:=\{(a, b, c) \in L\ |\ |a-i|\leq r\ and\ |b - j|  \leq r\ and\ |c - k|  \leq r\}$
@@ -35,10 +35,10 @@ a distancia menor a r. De forma mas precisa el conjunto de celdas vecinas es $N_
 
 
 \subsection{Juego de la vida}\label{subsec:juego-de-la-vida}
-Propuesto por John Horton Conway en 1970, el juego de la vida es un automata celular en dos dimensiones con las sigueintes reglas
+Propuesto por John Horton Conway en 1970\cite{gardner1970life}, el juego de la vida es un automata celular en dos dimensiones con las siguientes reglas\cite{toffoli1987cellular}:
 \begin{itemize}
     \item Se considera 8 vecinos (Vecindad de Moore, r = 1).
     \item Cada celda tiene dos estados posibles “Viva” o “Muerta” ($k=2$).
-    \item Las Celdas Vivas, permanecerán vivas en el siguiente paso temporal si tiene 2 o 3 vecinos vivos, de lo contrario morirá.
-    \item Las Celdas Muertas se transformarán en Vivas solamente si tiene exactamente 3 vecinos vivos.
+    \item Las celdas en el estado "Viva", permanecerán en dicho estado en el siguiente paso temporal si tiene 2 o 3 vecinos vivos, de lo contrario morirá.
+    \item Las celdas en el estado "Muerta" transicionarán al estado "Viva" solamente si tiene exactamente 3 vecinos en el estado "Viva".
 \end{itemize}
