--- a/TP2/docs/informe/informe.tex
+++ b/TP2/docs/informe/informe.tex
@@ -16,6 +16,8 @@
 % Document
 \begin{document}
 
+    \include{00-caratula}
+
     \tableofcontents
 
     \include{01-introduccion}
@@ -31,5 +33,8 @@
     \include{06-conclusiones}
 
     \include{08-apendice}
+
+    \bibliographystyle{plain}
+    \bibliography{references}    
 
 \end{document}
